--- a/ExemploNavBar/en.lproj/MainStoryboard.storyboard
+++ b/ExemploNavBar/en.lproj/MainStoryboard.storyboard
@@ -1,22 +1,209 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1906" systemVersion="11A511" targetRuntime="iOS.CocoaTouch" nextObjectID="6" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="GiQ-UK-Rw1">
     <dependencies>
-        <development defaultVersion="4200" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="902"/>
+        <deployment defaultVersion="1296" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
     </dependencies>
     <scenes>
-        <scene sceneID="5">
+        <!--View Controller - Item 2-->
+        <scene sceneID="35g-Mv-kJT">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
-                <viewController id="2" customClass="PrincipalViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZKI-Ec-VyF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="fc0-iV-yo8" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="agF-Er-G8r">
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="OfE-Cr-hsq"/>
                 </viewController>
             </objects>
+            <point key="canvasLocation" x="1092" y="437"/>
+        </scene>
+        <!--View Controller - Item-->
+        <scene sceneID="3Ty-rd-Nxh">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="u5y-n6-PcR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="oEY-w3-HhM" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZEe-R4-GZh">
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="PK3-Q8-Lga"/>
+                    <navigationItem key="navigationItem" id="WzF-nO-Wg3"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1092" y="1055"/>
+        </scene>
+        <!--Navigation Controller - navigation-->
+        <scene sceneID="NaV-wE-lHX">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZIS-SI-Iji" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController title="navigation" definesPresentationContext="YES" id="ZAC-q5-IbS" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="DbR-po-veF"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="YpG-HF-I2M">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="fs5-Xe-KZn" kind="relationship" relationship="rootViewController" id="hcx-zW-Tye"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="1518" y="1046"/>
+        </scene>
+        <!--View Controller - tela amarela-->
+        <scene sceneID="v3J-eK-bUL">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SNK-9A-v50" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="fs5-Xe-KZn" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8lh-qV-p9s">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="bsm-Pg-HMm">
+                                <rect key="frame" x="42" y="31" width="237" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="próxima tela">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="IcT-pp-cDl" kind="push" id="e2d-d8-gaB"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="tela amarela" id="OtU-e0-qz1"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1960" y="1055"/>
+        </scene>
+        <!--Segunda Tela Navigation - segunda tela-->
+        <scene sceneID="ySE-q3-xaL">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jet-ia-TIG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController title="segunda tela" id="IcT-pp-cDl" customClass="SegundaTelaNavigation" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6TL-ao-TPp">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="Lvb-9S-3eh">
+                                <rect key="frame" x="26" y="67" width="268" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="8tG-4d-PHv">
+                                <rect key="frame" x="124" y="14" width="72" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="botao">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="botaoClicado:" destination="IcT-pp-cDl" eventType="touchUpInside" id="hTM-dw-jKZ"/>
+                                    <segue destination="ncR-BP-n0V" kind="push" id="dSa-vR-pev"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="eei-aD-5Gb">
+                                <rect key="frame" x="26" y="141" width="268" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="rqa-F6-NQl"/>
+                    <connections>
+                        <outlet property="meuCampoTexto" destination="Lvb-9S-3eh" id="OO4-LB-guR"/>
+                        <outlet property="meuCampoTexto2" destination="eei-aD-5Gb" id="W82-Y8-sd3"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="2458" y="1037"/>
+        </scene>
+        <!--Terceira Tela Navigation-->
+        <scene sceneID="Jly-nD-FqL">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0VM-3H-HwF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="ncR-BP-n0V" customClass="TerceiraTelaNavigation" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tHW-5l-UWC">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" highlighted="YES" id="jQV-aA-FjI">
+                                <rect key="frame" x="25" y="29" width="263" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="dLR-mB-V8Q">
+                                <rect key="frame" x="23" y="124" width="275" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.18144852519999999" green="1" blue="0.064575469649999995" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="UMP-3O-GJA"/>
+                    <connections>
+                        <outlet property="labelBonito" destination="jQV-aA-FjI" id="Jdl-zI-b6X"/>
+                        <outlet property="labelBonito2" destination="dLR-mB-V8Q" id="Mfi-ZW-oms"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="2840" y="1046"/>
+        </scene>
+        <!--View Controller - Item 1-->
+        <scene sceneID="JrM-B5-yvS">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lzB-gc-lQp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="7f1-ri-rLv" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rc5-oT-cQl">
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="Mah-1J-ou5"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1092" y="-127"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="r5E-1s-GW0">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fuj-3X-MXH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tabBarController definesPresentationContext="YES" id="GiQ-UK-Rw1" sceneMemberID="viewController">
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="blw-Cz-p2d">
+                        <rect key="frame" x="129" y="330" width="163" height="49"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="7f1-ri-rLv" kind="relationship" relationship="viewControllers" id="vXY-I9-tY7"/>
+                        <segue destination="fc0-iV-yo8" kind="relationship" relationship="viewControllers" id="dif-Do-YFU"/>
+                        <segue destination="oEY-w3-HhM" kind="relationship" relationship="viewControllers" id="X9E-jI-6OI"/>
+                        <segue destination="ZAC-q5-IbS" kind="relationship" relationship="viewControllers" id="Yg7-9C-InE"/>
+                    </connections>
+                </tabBarController>
+            </objects>
+            <point key="canvasLocation" x="546" y="156"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
